application/views/sass/2_template.scss
/* ... */
.search-data{
	@extend .search-button;
	top: 10px;
  right: 10px;
  width: 21px;
  height: 20px;
}
/*======Administrator Login Site=========*/
.login-form{
	margin: auto;
	margin-top: 20px !important;
	max-width: 500px;
	input[type=email], input[type=password]{
		max-width: 465px;
		height: 45px;
	}
	input[type=submit]{
		margin-left: 32%;
	  height: 45px !important;
	  width: 180px !important;
	}
}

/*===============Change Pass=============*/
.change-pass{
	.input-pass{
		margin-top:10px !important;
		margin-bottom: 10px !important;
		max-width: 460px ;
		height: 40px;
	}
	input[type=submit]{
		margin-left: 30%;
		margin-top:10px !important;
		margin-bottom: 10px !important;
	    height: 50px !important;
	    width: 135px !important;
	}
}
/*================Contact Info===============*/
.user-table-info{
	td{
		padding:0px !important;
		padding-bottom: 6px !important;
		border:none !important;
	}
	th{
		@extend td;
		max-width: 60px !important;
		font-weight: normal;
	}
}
.change-info{
	width: 180px;
	height: 45px;
}

/*=============Create New Product=============*/
.create-btn{
	width: 130px;
	font-size: 19px;
}
.new-product{
	width: 675px;
	table{
		th, td{
		border: none !important;
		font-weight: normal;
		}
		.short-input{
			width: 150px;
			display: inline;
		}
		td{
			position: relative;
			input[type=text], input[type=submit]{
				height: 45px;
			}
		}
		.row-name{
			border-bottom: 1px dashed #dddddd !important;
			.radio-inline{
				padding-left: 0px;
			}
		}
	}
}
.tabs-panel{
	border-bottom: solid 4px #f0f0f0;
	padding-right: 10px;
	padding-left: 10px;
	/* Khong can nha dat, cu full 100% design ve bay cho nay */
	//max-width: 605px;
	margin-bottom: 12px;
	.active{
		a{
			padding-left: 30px;
			padding-right: 30px;
			color: #ffffff !important;
			background-color: #7ac142 !important;
			border:none !important;
		}
	}
	li{
		a{
			background-color: #4e525b;
			color: #ffffff;
			border:none;
			padding-left: 30px;
			padding-right: 30px;
		}
		a:hover{
			background-color: #7ac142;
			border:none;
		}
	}
}
.input-basic-table{
	th{
		//padding-left: 55px !important;
		vertical-align: middle !important;
		//width: 195px;
	}
}
.input-advance-table{
	max-width: 480px;
	margin: auto;
	label{
		margin: 0px;
		display: inline-block;
		font-weight: normal;
		padding-left: 25px;
	}
	.single{float: right;}
}
.input-file-table{
	max-width:595px;
	.thumbnail{
		position: relative;
		float: right;
		margin-left: 35px;
		padding: 0px !important;
		width: 150px;
		height: 150px;
		border: 3px solid #eaeaea;		
		img {
			width: 100%;
		}
		span{
			position: absolute;
			top:52px;
			left:52px;
			display: block;
			height: 40px;
			width: 40px;
			opacity: 1 !important;
			background-image:url(../../assets/images/play-icon.png);
			background-position: center;
			background-repeat: no-repeat;
			z-index: 2;
		}
	}
	.select-title{
		font-size: 19px;
	  position: relative;
	  top: 6px;
	}
	.create-btn{
		margin-left: 44.5%;
	}
	.video-mask{
		position: absolute;
		width: 100%;
		height:100%;
		background-color: #000000;
		opacity: 0.2;
		z-index: 1;
	}
}
.add-table{
	span{
		margin-right: 5px;
		height: 18px;
		width: 18px !important;
		display: block;
		background-image: url(../../assets/images/add-subtr-icon.png) !important;
		background-position: right;
		cursor: pointer;
	}
}
.subtract-table{
	span{
		margin-right: 5px;
		height: 18px;
		width: 18px !important;
		display: block;
		background-image: url(../../assets/images/add-subtr-icon.png)!important;
		background-position: left;
		cursor: pointer;
	}
}
.extra-table{
	.create-btn{
			margin-left: 39%;
	}
}
.input-advance-table{
	input[type=radio]{
		margin-left: 0px !important;
	}
}
.input-pricing-table{
	th{
		width: 180px;
		font-size: 20px;
	}
	.season-seat{
		font-size: 16px !important;
	}
}
/*==============Style datepicker==============*/

.prev, .next, .datepicker-switch{
	border-radius: 0px !important;
}
.datepicker thead tr:first-child{
	background-color: #7ac142;
}
.datepicker thead tr:first-child th:hover{
	background-color: #7ac142;
}
.datepicker table tr td{
	border-radius: 100% !important;
	font-size: 10px;
}
.dow{
	font-size: 10px;
}
/*==============Radio button style============*/
input[type=radio]{
	-webkit-appearance: none;
	margin-top: 2px;
	background-color: #ffffff;
	height: 18px;
	width:18px;
	border-radius: 100%;
	border: 2px solid #7f7f7f;	
}
input[type='radio']:checked{
	background-image: url(../../assets/images/checked.png);
	background-repeat: no-repeat;
	background-position: center;

}

/*==============Style File input===============*/
.select-file{
	max-width: 500px;
	float: right;
	input[type=text]{
		height: 45px !important;
	}
	span{
		height: 45px;
		line-height: 2;
	}
	.filePath{
		overflow: hidden;
		input[type=file]{
		display: block;
	  position: absolute;
	  text-align: right;
    filter: alpha(opacity=0);
	  right: 0px;
	  top: 0px;
	  opacity: 0;
	  height: 100%;
	  width: 100%;
	  cursor: pointer;
	  }	
	}
}
//===============Handler style===============*/

#spring, #summer, #autumn, #winter, #low, #middle, #high, #max{
	border-bottom-right-radius: 10px !important;
	border-bottom-left-radius: 10px !important;
	border-top-right-radius: 10px !important;
	border-top-left-radius: 10px !important;
	border:none;
	height:16px;
	background-color:#f3f4f5;
	.ui-slider-handle, .ui-corner-all, .ui-state-default{
		top:-2px;
		border: 4px solid #ffffff !important;
		border-radius:100%;
    background: #0077c0 !important;
    font-weight: normal;
    height: 20px;
    width: 20px;
	}
}

#spring-percent, #autumn-percent, #summer-percent, #winter-percent, #low-percent,
#middle-percent, #high-percent, #max-percent{
		border: none;
    position: relative;
    height: 20px;
    font-size: 12px;
    width: 100%;
    padding-top: 10px;
    color: #0077c0;
    font-weight: bold;
    background:transparent;
	}
/* ... */

